@@ -644,6 +644,8 @@ wxMSW:
 - Fix handling of controls in the vertical toolbars (Artur Wieczorek).
 - Fix loading of top to bottom BMP files in wxBitmap (Artur Wieczorek).
 - Fix resource leak in wxStaticBitmap with RGBA icons (Artur Wieczorek).
+- Disable the use of new style wxDirDialog under Vista to work around a bug in
+  its implementation under this system (jtrauntvein).
 
 wxOSX:
 
